# drf-api-permissions-postgres

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
coffehouseapi_project/: settings.py  urls.py
